@@ -1,5 +1,6 @@
 
 <ul class="nav navbar-nav navbar-right filter-control">
+
   {{#each filter_config as |f|}}
     {{#if f.is_toggle}}
       <form class="navbar-form navbar-right" action="">
