@@ -1,0 +1,5 @@
+{{#if humanize}}
+  {{humanized_text}}
+{{else}}
+  {{raw_times_text}}
+{{/if}}
