@@ -22,6 +22,7 @@
       <i class="fa fa-spinner fa-spin"></i>
     {{/if}}
   </div>
+  {{item-times start=test.start_time end=test.end_time humanize=humanize_times}}
 </div>
 
 <div class="right-label warnings {{if test.num_warnings 'visible'}}">
