@@ -5,4 +5,9 @@ import PaginatedFilteredController from '../controllers/paginated_filtered_contr
 export default PaginatedFilteredController.extend({
 
     collection: Ember.computed.oneWay('sessions'),
+
+    queryParams: ['humanize_times'],
+
+    humanize_times: true,
+
 });
