@@ -1,2 +1,2 @@
 
-{{query-results results=sessions update_filter=(action "update_filter") goto_page=(action "goto_page")}}
+{{query-results results=sessions update_filter=(action "update_filter") goto_page=(action "goto_page") humanize_times=humanize_times}}
