@@ -1,129 +1,0 @@
-.exception-type {
-    color: rgb(70, 82, 98);
-    border: 0px none rgb(70, 82, 98);
-    outline: rgb(70, 82, 98) none 0px;
-    font-weight: bold;
-    font-size: 18px;
-    padding-top: 10px;
-}
-
-.exception-description {
-    color: rgb(71, 71, 71);
-    border: 0px none rgb(71, 71, 71);
-    border-radius: 4px 4px 4px 4px;
-    margin: 0px 0px 10px;
-    outline: rgb(71, 71, 71) none 0px;
-    padding: 10px;
-    background: rgb(248, 248, 248) none repeat scroll 0% 0% / auto padding-box border-box;
-}
-
-.traceback-line-headline {
-    color: rgb(70, 82, 98);
-    text-align: left;
-}
-
-.traceback-line-code {
-    @extend .mono;
-    color: rgba(0, 0, 0, 0.74902);
-    cursor: pointer;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    background: rgb(222, 227, 233) none repeat scroll 0% 0% / auto padding-box border-box;
-    border: 0px none rgba(0, 0, 0, 0.74902);
-    padding: 5px 5px 5px 10px;
-}
-
-pre span{
-    background: rgb(213, 218, 224) none repeat scroll 0% 0% / auto padding-box border-box;
-}
-
-
-.error-description {
-    border-top: 1px dotted rgb(71, 71, 71);
-}
-
-.skip-reason {
-    display: inline-block;
-    max-width: 30em;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    background: $brand-warning;
-    border-radius: 3px;
-    padding: 0.2em;
-    font-size: small;
-    color: white;
-}
-
-$running-color: $brand-info;
-
-@keyframes running-pulse {
-    from { background-color: $running-color;}
-    50% { background-color: darken($running-color, 20%);}
-    to { background-color: $running-color;}
-}
-
-
-.status-label {
-
-    &.running {
-	background-color: $running-color;
-	animation-name: running-pulse;
-	animation-duration: 2s;
-	animation-iteration-count: infinite;
-    }
-
-    &.failure, &.error {
-	background-color: $brand-danger;
-    }
-
-    &.skipped {
-	background-color: $brand-warning;
-    }
-
-    &.success {
-	background-color: $brand-success;
-    }
-
-    border-radius: 3px;
-    box-sizing: border-box;
-    display: inline-block;
-    color: white;
-    padding: 0.1em 0.5em 0.1em 0.5em;
-    text-align: center;
-    margin-right: 2em;
-    width: 5em;
-}
-
-.test-detail-value {
-    font-weight: bold;
-
-}
-
-
-.tooltipster-error-preview {
-    border-radius: 5px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
-    background: $brand-danger;
-    color: white;
-    .tooltipster-content {
-	font-size: xx-small !important;
-    }
-}
-
-.tooltipster-skip-reason {
-    border-radius: 5px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
-    background: $brand-warning;
-    color: white;
-}
-
-
-.tooltipster-error-preview .tooltipster-content, .tooltipster-skip-reason .tooltipster-content {
-    @extend .mono;
-    overflow: ellipsis;
-    text-overflow: ellipsis;
-    font-size: 14px;
-    line-height: 16px;
-    padding: 8px 10px;
-}
