@@ -1,0 +1,4 @@
+.x-toggle:checked + .x-toggle-skewed.x-toggle-btn {
+
+    background-color: $backslash-orange;
+}
