@@ -38,6 +38,7 @@
     "ember-cli-release": "0.2.8",
     "ember-cli-sass": "^4.0.0",
     "ember-cli-sri": "^2.1.0",
+    "ember-cli-toggle": "1.0.0",
     "ember-cli-tooltipster": "0.1.4",
     "ember-cli-uglify": "^1.2.0",
     "ember-composable-helpers": "0.18.0",
